Mobile layout done and layout bug fixes

--- a/src/pages/Countries/Countries.css
+++ b/src/pages/Countries/Countries.css
@@ -1,9 +1,4 @@
 
-body {
-
-    background-color: hsl(0, 0%, 98%);
-}
-
 .search-filter {
 
     display: flex;
@@ -13,6 +8,7 @@ body {
     padding: 20px;
     margin-top: -2px;
     margin-bottom: -1px;
+    background-color: hsl(0, 0%, 98%);
 
 }
 
@@ -23,6 +19,7 @@ body {
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-items: center;
+    background-color: hsl(0, 0%, 98%);
 
 }
 
@@ -46,4 +43,53 @@ body {
     grid-template-columns: auto auto auto auto;
     justify-items: center;
     background-color: hsl(207, 26%, 17%);
+}
+
+@media (min-width:320px) and (max-width:768px) {
+
+    .search-filter {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        height: 150px;
+        padding: 20px;
+        margin-top: -2px;
+        margin-bottom: -1px;
+    
+    }
+    
+    .countryCards {
+    
+        padding: 30px;
+        display: grid;
+        grid-template-columns: auto;
+        justify-items: center;
+    
+    }
+
+    .search-filter-dark {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        height: 150px;
+        padding: 20px;
+        margin-top: -2px;
+        margin-bottom: -1px;
+        background-color: hsl(207, 26%, 17%);
+    
+    }
+    
+    .countryCards-dark {
+    
+        padding: 30px;
+        display: grid;
+        grid-template-columns: auto;
+        justify-items: center;
+        background-color: hsl(207, 26%, 17%);
+    }
+    
 }
